        vectorizable codition.
        * tree-vect-transform.c (vect_is_simple_cond): New function.
        (vectorizable_condition): New function.
        (vect_transform_stmt): Handle condition_vec_info_type.
        * tree-vectorizer.h (enum stmt_vec_info_type): Add
        condition_vec_info_type.
        (vectorizable_condition): New.
	
2005-04-11  Geoffrey Keating  <geoffk@apple.com>

	* dwarf2out.c (output_line_info): Don't try to dereference
	a NULL current_function_decl.

	* config/t-slibgcc-darwin: Don't put shared libraries in
	directories other than $(slibdir).
	* config/rs6000/darwin.h: Find -m64 libgcc under the name the
	OS uses for it.

2005-04-11  Diego Novillo  <dnovillo@redhat.com>

	PR tree-optimization/20933
	* tree-ssa-alias.c (compute_flow_insensitive_aliasing): Move
	logic to reject aliases between read-only and writable
	variables ...
	(may_alias_p): ... here.
	(get_tmt_for): Do not associate read-only tags to pointers
	whose pointed-to type is not read-only.
	* tree-ssa.c (verify_ssa): Check that memory stores have at
	least one V_MAY_DEF or V_MUST_DEF.

2005-04-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	PR/17092
	* configure.ac (gcc_UNLOCKED_FUNCS): New.
	(AC_CHECK_FUNCS, AC_CHECK_DECLS): Check for gcc_UNLOCKED_FUNCS.
	* system.h (putchar, getc, getchar, clearerr, feof, fileno,
	fflush, fgetc, fgets, ferror, fread): Redefine to the associated
	_unlocked function.
	(fwrite_unlocked): Fix prototype.
	
	* configure, config.in: Regenerate.

2005-04-11  David Edelsohn  <edelsohn@gnu.org>

	* tree-ssa-loop-im.c: Include real.h.
	(determine_invariantness_stmt): If real division divisor is
	invariant and flag_unsafe_math_optimizations enabled, generate
	invariant reciprocal for hoisting.
	* Makefile.in (tree-ssa-loop-im.o): Add real.h dependency.

2005-04-11  Daniel Berlin  <dberlin@dberlin.org>

	Fix PR tree-optimization/20926
	
	* tree-ssa-alias.c (add_type_alias): Handle subvars.
	
2005-04-11  Devang Patel  <dpatel@apple.com>
